--- a/styles/basic.css
+++ b/styles/basic.css
@@ -5,7 +5,7 @@
 }
 @font-face {
     font-family: 'Roboto-Bold';
-    src: url(./fonts/Roboto-Bold.woff2);
+    src: url(/fonts/Roboto-Bold.woff2);
     font-weight: 700;
 }
 * {
@@ -15,4 +15,18 @@ body {
     margin: 0;
     font-family: 'Roboto-Medium';
     background-color: var(--bg-main);
+}
+a {
+    text-decoration: none;
+    color: unset;
+}
+ul {
+    list-style: none ;
+    margin: 0;
+    padding: 0;
+}
+.container {
+    margin: 0 auto;
+    max-width: 970px;
+    padding: 0 10px;;
 }
