--- a/styles/basic.css
+++ b/styles/basic.css
@@ -1,11 +1,11 @@
 @font-face {
     font-family: 'Roboto-Medium';
-    src: url(/fonts/Roboto-Medium.woff2);
+    src: url(../fonts/Roboto-Medium.woff2);
     font-weight: 500;
 }
 @font-face {
     font-family: 'Roboto-Bold';
-    src: url(/fonts/Roboto-Bold.woff2);
+    src: url(../fonts/Roboto-Bold.woff2);
     font-weight: 700;
 }
 * {
