--- a/index.css
+++ b/index.css
@@ -6,3 +6,4 @@
 @import url(styles/history.css);
 @import url(styles/portfolio.css);
 @import url(styles/conacts.css);
+@import url(styles/mobilenav.css);
